--- a/EmacsAndOrgMode.org
+++ b/EmacsAndOrgMode.org
@@ -309,8 +309,7 @@ My source here is [[http://gewhere.github.io/blog/2017/12/19/setup-matlab-in-ema
 To set up MATLAB with Emacs, we need a shell script. Diapoulis
 recommends a file called =matlab_emacs_wrapper=, with the following
 listing (of course, I have modified it for my computer):
-#+BEGIN_SRC bash
-#!/bin/bash
+#+BEGIN_SRC bash :tangle ~/matlab_emacs_wrapper :shebang "#!/bin/bash" :padline no
 # https://ch.mathworks.com/matlabcentral/answers/319655-why-does-matlab-r2016b-crash-when-launched-from-matlab-emacs?
 shell_stack_size=$(ulimit -s)
 
@@ -318,17 +317,29 @@ adjusted_stack_size=$[4*((($shell_stack_size-1)/4)+1)]
 
 ulimit -s $adjusted_stack_size && /Applications/MATLAB_R2020a.app/bin/matlab $@
 #+END_SRC
+Note:
+- If I tangle this to the file system, Emacs recognizes that it has a
+  shebang and makes it executable
+- If I copy and paste this into the file system, then I need to make
+  it executable by typing in the command line
+  #+BEGIN_SRC sh
+  chmod 755 ~/matlab_emacs_wrapper
+  #+END_SRC
 
-We make this executable by typing in the command line
-#+BEGIN_SRC
-chmod 755 matlab_emacs_wrapper
+Diapoulis recommends running the script to see if you can make MATLAB
+run properly. Notes:
+- The script ran from the command prompt
+- The script did not run from an Emacs code block
+
+*** Testing
+
+#+BEGIN_SRC matlab
+%% Here is a MATLAB region
+disp('hello world')
 #+END_SRC
-and then executing it using
-#+BEGIN_SRC
 
-#+END_SRC
-Diapoulis recommends checking to see if the sc
-
+This doesn't work for me. I get an error saying, "Autoloading failed
+to define function matlab-shell"
 * Extending Emacs Org mode: Org-ref
 
 ** Introduction to =org-ref=
@@ -425,3 +436,113 @@ Org mode document:
 Beamer is a LaTeX class for presentations. The org-mode reference has
 a section on beamer, but there also is a nice page on orgmode.org
 titled "[[https://orgmode.org/worg/exporters/beamer/ox-beamer.html][Beamer presentations using the new export engine]]".
+
+* Illustrations in Org mode
+
+** TikZ and Org mode
+We can make plots in MATLAB or Python using code blocks. Another
+option is to use TikZ. TikZ is a package for LaTeX and has become my
+favourite illustrating system (so much so that I use the British
+spelling of /favorite/). I learned from a blogger (I learned
+after my use of /favourite/ that the blogger is British) that we can
+[[https://www.homepages.ucl.ac.uk/~ucahjde/blog/tikz.html][make LaTeX code blocks that produce TikZ graphics]].
+
+*** Setup
+The blog post or a search leads us to the Org manual page on
+[[https://orgmode.org/worg/org-contrib/babel/languages/ob-doc-LaTeX.html][LaTeX code blocks]]. To set up LaTeX code blocks, we perform the
+following: 
+1. Point Emacs to the LaTeX executable by adding this to my
+   preferences file:
+   #+begin_verbatim elisp
+   ;; point Emacs to latex on my Mac
+   (setq exec-path (append exec-path '("/Library/TeX/texbin")))
+   #+end_verbatim
+2. Enable =org-babel= support for LaTeX. To do this, we add ='((latex
+   . t))= to our Emacs preferences file within the
+   =org-babel-do-load-languages= command. Thus, to support Python,
+   shell, and LaTeX, I have the following in my preferences file:
+   #+begin_verbatim elisp
+   ;; Adds support for executable Python code blocks
+   (org-babel-do-load-languages
+    'org-babel-load-languages
+    '((python . t)
+      (sh . t)
+      (latex . t)))
+   #+end_verbatim
+3. Install the =auctex= package
+   1. Use =M-x package-install= followed by =acutex=.
+   2. Add =(load "auctex.el" nil t t)= to my preferences file.
+
+*** Examples
+These examples need some work. They produce the following:
+- An SVG that doesn't render as an image in Org mode
+  - Maybe I can set up Org mode to render SVG
+- A PDF with a crazy hashed name, and not in the destination I
+  want. The PDF doesn't render in Org mode, but rather gets displayed
+  in Adobe Acrobat.
+
+This first example produces a =*.svg= file. Copying - with a
+few adaptations - from the blog post, I have:
+#+HEADER: :file img/contour.svg :imagemagick yes
+#+HEADER: :results output silent :headers '("\\usepackage{tikz}")
+#+HEADER: :fit yes :imoutoptions -geometry 400 :iminoptions -density 600
+#+BEGIN_src latex
+\begin{tikzpicture}
+\draw[->] (-3,0) -- (-2,0) arc[radius=0.5cm,start angle=-180,end angle=0] (-1,0) -- (1,0) arc[radius=0.5cm,start angle=180,end angle=0] (2,0) -- (3,0);
+\filldraw (-1.5,0) circle[radius=1mm];
+\filldraw (1.5,0) circle[radius=1mm];
+\end{tikzpicture}
+#+END_src
+
+Unfortunately, I didn't get the SVG to render well in Org mode. It
+probably would render well - as intended - in the blogger's html
+result.
+
+The [[https://emacs.stackexchange.com/questions/20488/how-do-i-create-a-floating-tikz-figure-when-exporting-to-pdf-in-org-mode][next example]] comes from StackExchange and produces a pdf:
+#+HEADER: :file img/fsa.pdf
+#+HEADER: :results raw silent :headers '("\\usepackage{tikz}")
+#+begin_src latex :border 1em
+  % Define block styles
+  \usetikzlibrary{shapes,arrows}
+  \tikzstyle{astate} = [circle, draw, text centered, font=\footnotesize, fill=blue!25]
+  \tikzstyle{rstate} = [circle, draw, text centered, font=\footnotesize, fill=red!25]
+
+  \begin{tikzpicture}[->,>=stealth', shorten >=1pt, auto, node distance=2.8cm, semithick]
+    \node [astate] (1) at (0,0) {1};
+    \node [astate] (2) at (1,0) {2};
+    \node [rstate] (3) at (2,0) {3};
+    \path (1) edge [bend left] node {b} (2)
+          (2) edge node {b} (3)
+          (2) edge [bend left] node {a} (1)
+          (3) edge [loop above] node {(a, b)} (3);
+  \end{tikzpicture}
+#+end_src
+The problem here is that it doesn't produce the result in the right
+place, nor does it provide the right file name. I had to manually copy
+the result from the present directory (containing this Org file) to
+the destination directory. Additionally, the file had some hashed
+name, so I renamed it to the desired name.
+
+#+RESULTS:
+
+To display the PDF result here, we use:
+#+CAPTION: tikz caption
+#+LABEL: fig:tikz
+#+RESULTS:
+[[./img/fsa.pdf]]
+The other problem is that this link opens in Adobe Acrobat, and not in
+an Emacs buffer.
+
+
+I also tried exporting to =eps=, but that didn't work so well.
+
+#+HEADER: :file img/contour.eps :imagemagick yes
+#+HEADER: :results output silent :headers '("\\usepackage{tikz}")
+#+HEADER: :fit yes :imoutoptions -geometry 400 :iminoptions -density 600
+#+BEGIN_src latex
+\begin{tikzpicture}
+\draw[->] (-3,0) -- (-2,0) arc[radius=0.5cm,start angle=-180,end angle=0] (-1,0) -- (1,0) arc[radius=0.5cm,start angle=180,end angle=0] (2,0) -- (3,0);
+\filldraw (-1.5,0) circle[radius=1mm];
+\filldraw (1.5,0) circle[radius=1mm];
+\end{tikzpicture}
+#+END_src
